tests/baselines/reference/classAbstractCrashedOnce.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractCrashedOnce.ts(8,5): error TS1003: Identifier expected.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractCrashedOnce.ts (1 errors) ====
    abstract class foo {
        protected abstract test();
    }
    
    class bar extends foo {
        test() {
            this.
        }
        ~
!!! error TS1003: Identifier expected.
    }
    var x = new bar();